--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <title>Jazztabueno Productions</title>
-    <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
-
     <style>
-        /* 🛡️ ESTILOS BLINDADOS */
         :root { --gold: #a68a44; --bg: #050505; --card: #121212; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
-        html, body { margin: 0; background: var(--bg); color: #ffffff; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; overflow-y: auto !important; }
+        body { margin: 0; background: var(--bg); color: #ffffff; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; }
         
+        /* LOGIN */
         #login-screen { position: fixed; inset: 0; background: black; z-index: 5000; display: flex; align-items: center; justify-content: center; }
         .login-card { width: 85%; max-width: 320px; text-align: center; background: #111; padding: 40px 30px; border-radius: 25px; border: 1px solid #222; }
         .login-card input { width: 100%; padding: 15px; margin-bottom: 25px; background: #222; border: 1px solid var(--gold); color: white; border-radius: 12px; text-align: center; font-size: 16px; }
@@ -33,23 +30,22 @@
         .active .channel-logo { border-color: var(--gold); }
         .channel-name { font-size: 6px; color: #ffffff; font-weight: 800; text-transform: uppercase; line-height: 1.1; width: 100%; }
 
-        .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; border: 1px solid #1a1a1a; overflow: hidden; transition: 0.3s; }
+        .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; border: 1px solid #1a1a1a; overflow: hidden; }
         .episode-card.is-playing { border-color: var(--gold); }
         .cover-art { width: 100%; height: 180px !important; background-size: cover; background-position: center; position: relative; border: 1.5px solid var(--gold); }
         .cover-overlay { position: absolute; inset: 0; display: flex !important; align-items: center !important; justify-content: center !important; }
-        
         .btn-play-card { background-color: var(--gold) !important; border: none !important; width: 55px !important; height: 55px !important; border-radius: 50% !important; display: flex !important; align-items: center !important; justify-content: center !important; cursor: pointer; padding: 0; }
         .btn-play-card svg { width: 28px !important; height: 28px !important; fill: black !important; }
 
         .episode-info { padding: 20px; }
         .episode-title { margin: 8px 0; font-size: 19px; font-weight: 800; color: #ffffff; }
-        .btn-ver-playlist { background: #1a1a1a !important; border: 1.5px solid #333 !important; color: #ffffff !important; padding: 12px !important; border-radius: 12px !important; font-size: 11px !important; font-weight: 800 !important; cursor: pointer !important; width: 100% !important; text-transform: uppercase !important; }
-        .playlist-box { display: none; margin-top: 15px; padding: 20px; background: #080808; border-radius: 15px; border: 1px solid #222; font-size: 14px; color: #ffffff; line-height: 1.8; white-space: pre-wrap; }
+        .btn-ver-playlist { background: #1a1a1a !important; border: 1.5px solid #333 !important; color: #ffffff !important; padding: 12px !important; border-radius: 12px !important; font-size: 11px !important; font-weight: 800 !important; cursor: pointer !important; width: 100% !important; }
+        .playlist-box { display: none; margin-top: 15px; padding: 20px; background: #080808; border-radius: 15px; border: 1px solid #222; font-size: 14px; white-space: pre-wrap; }
 
         #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 3px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
         .p-vinyl { width: 55px; height: 55px; border-radius: 50%; border: 2.5px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
         .playing .p-vinyl { animation-play-state: running; }
-        #p-play-btn { background: none; border: none; cursor: pointer; display: flex; align-items: center; justify-content: center; }
+        #p-play-btn { background: none; border: none; cursor: pointer; display: flex; align-items: center; }
         #p-play-btn svg { width: 38px; height: 38px; fill: var(--gold); }
         @keyframes rotateVinyl { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
@@ -62,7 +58,7 @@
 
 <div id="login-screen">
     <div class="login-card">
-        <img src="logo.png" style="width:90px; margin-bottom:20px;">
+        <img src="logo.png" style="width:80px; margin-bottom:20px;">
         <h2 style="color:var(--gold); font-family:'Playfair Display';">JAZZTABUENO</h2>
         <input type="password" id="passInput" placeholder="Clave de Director">
         <button onclick="checkLogin()" class="btn-entrar-premium">ENTRAR ▶</button>
@@ -72,7 +68,7 @@
 <div id="app-content" style="display:none;">
     <header>
         <div style="display:flex; align-items:center; gap:12px;">
-            <img src="logo.png" width="35" height="35" id="admin-trigger" class="header-logo">
+            <img src="logo.png" width="35" height="35" id="admin-trigger">
             <div class="brand-title">Jazztabueno<br>Productions</div>
         </div>
         <button onclick="salirTotal()" class="btn-salir-premium">SALIR</button>
@@ -91,7 +87,7 @@
             <input type="text" id="t-url" style="width:100%; padding:14px; background:#000; color:white; border:1px solid #333; border-radius:10px; margin-bottom:10px;" placeholder="URL Audio">
             <input type="text" id="t-img" style="width:100%; padding:14px; background:#000; color:white; border:1px solid #333; border-radius:10px; margin-bottom:10px;" placeholder="URL Portada">
             <textarea id="t-playlist" style="width:100%; height:120px; background:#000; color:white; border:1px solid var(--gold); border-radius:10px; padding:10px; margin-bottom:15px;" placeholder="Lista..."></textarea>
-            <div style="display:flex; gap:10px;"><button id="btn-save" style="flex:2; background:var(--gold); border:none; padding:15px; border-radius:12px; font-weight:800; cursor:pointer;">💾 GUARDAR</button><button onclick="cancelarEdicion()" style="flex:1; background:transparent; border:1px solid #444; color:#888; border-radius:12px; cursor:pointer;">❌</button></div>
+            <div style="display:flex; gap:10px;"><button id="btn-save" style="flex:2; background:var(--gold); border:none; padding:15px; border-radius:12px; font-weight:800;">💾 GUARDAR</button><button onclick="cancelarEdicion()" style="flex:1; background:transparent; border:1px solid #444; color:#888; border-radius:12px;">❌</button></div>
         </div>
 
         <div class="channels-container">
@@ -109,7 +105,7 @@
     <audio id="main-media" crossorigin="anonymous"></audio>
     <div style="display:flex; align-items:center; gap:15px; margin-bottom:15px;">
         <div id="p-vinyl" class="p-vinyl" style="background-image: url('logo.png');"></div>
-        <div style="flex:1; overflow:hidden;"><h4 id="p-title" style="margin:0; font-size:15px; color:#ffffff; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; font-weight:800;">...</h4><div id="p-time" style="font-size:12px; color:var(--gold); font-weight:900; margin-top:3px;">00:00 / 00:00</div></div>
+        <div style="flex:1; overflow:hidden;"><h4 id="p-title" style="margin:0; font-size:15px; color:#ffffff; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; font-weight:800;">...</h4><div id="p-time" style="font-size:12px; color:var(--gold); font-weight:900;">00:00 / 00:00</div></div>
         <button onclick="togglePlay()" id="p-play-btn"></button>
         <button onclick="cerrarPlayer()" style="background:none; border:none; color:#666; font-size:28px;">×</button>
     </div>
@@ -151,8 +147,7 @@
                     metadata.images = [new chrome.cast.Image(currentCover)];
                     mediaInfo.metadata = metadata;
                     const request = new chrome.cast.media.LoadRequest(mediaInfo);
-                    request.currentTime = media.currentTime;
-                    session.loadMedia(request);
+                    request.currentTime = media.currentTime; session.loadMedia(request);
                 }
                 if (event.sessionState === cast.framework.SessionState.SESSION_ENDED) {
                     if (lastTvTime > 0) { media.currentTime = lastTvTime; }
@@ -164,10 +159,10 @@
 
     window.checkLogin = () => {
         const p = document.getElementById('passInput').value.toLowerCase().trim();
-        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v10', 'true'); location.reload(); }
+        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v11', 'true'); location.reload(); }
         else { alert("Clave Incorrecta"); }
     };
-    if(localStorage.getItem('jtp_auth_v10')) {
+    if(localStorage.getItem('jtp_auth_v11')) {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('app-content').style.display = 'block';
         isAdmin = true;
@@ -229,7 +224,7 @@
                     <span style="color:var(--gold); font-size:9px; font-weight:900; text-transform:uppercase;">${p.programa}</span>
                     <h3 class="episode-title">${p.titulo}</h3>
                     <button class="btn-ver-playlist" onclick="window.togglePlaylist('${p.id}')">📋 VER PROGRAMACIÓN</button>
-                    <div id="list-${p.id}" class="playlist-box">${p.playlist || "Próximamente."}</div>
+                    <div id="list-${p.id}" class="playlist-box">${p.playlist || "Detalles pronto."}</div>
                     ${isAdmin ? `<div class="dj-actions" style="display:flex; gap:10px; margin-top:20px; border-top:1px solid #222; padding-top:20px;">
                         <button class="btn-dj-edit" onclick="prepararEdicion('${p.id}')" style="background:transparent; border:1.5px solid var(--gold); color:var(--gold); flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🖋️ EDITAR</button>
                         <button class="btn-dj-del" onclick="borrarDoc('${p.id}')" style="background:transparent; border:1.5px solid #ff4444; color:#ff4444; flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🗑️ BORRAR</button>
@@ -237,7 +232,10 @@
                 </div>`;
             feed.appendChild(div);
         });
-        actualizarPlayerStatus();
+        const pBtn = document.getElementById('p-play-btn');
+        if(pBtn) pBtn.innerHTML = media.paused ? playSVG : pauseSVG;
+        if(!media.paused) document.getElementById('global-player').classList.add('playing');
+        else document.getElementById('global-player').classList.remove('playing');
     }
 
     window.gestionarReproduccion = (id, url, tit, img) => {
@@ -245,13 +243,6 @@
         else { idActual = id; currentAudioUrl = url; currentTitle = tit; currentCover = img; media.src = url; media.play(); document.getElementById('p-title').innerText = tit; document.getElementById('p-vinyl').style.backgroundImage = `url('${img}')`; document.getElementById('global-player').style.display = 'block'; }
         render();
     };
-
-    function actualizarPlayerStatus() {
-        const pBtn = document.getElementById('p-play-btn');
-        if(pBtn) pBtn.innerHTML = media.paused ? playSVG : pauseSVG;
-        if(!media.paused) document.getElementById('global-player').classList.add('playing');
-        else document.getElementById('global-player').classList.remove('playing');
-    }
 
     media.ontimeupdate = () => { seekBar.value = media.currentTime; document.getElementById('p-time').innerText = formatTime(media.currentTime) + " / " + formatTime(media.duration); };
     media.onloadedmetadata = () => { seekBar.max = media.duration; };
