--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .active .channel-logo { border-color: var(--gold); }
         .channel-name { font-size: 6px; color: #ffffff; font-weight: 800; text-transform: uppercase; line-height: 1.1; width: 100%; }
 
-        /* TARJETAS */
+        /* TARJETAS CON MARCO DORADO */
         .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; border: 1px solid #1a1a1a; overflow: hidden; }
         .episode-card.is-playing { border-color: var(--gold); }
         .cover-art { width: 100%; height: 180px !important; background-size: cover; background-position: center; position: relative; border: 1.5px solid var(--gold); }
@@ -64,7 +64,7 @@
         <img src="logo.png" style="width:80px; margin-bottom:20px;">
         <h2 style="color:var(--gold); font-family:'Playfair Display';">JAZZTABUENO</h2>
         <input type="password" id="passInput" placeholder="Clave de Director">
-        <button onclick="checkLogin()" class="btn-entrar-premium">ENTRAR ▶</button>
+        <button onclick="window.checkLogin()" class="btn-entrar-premium">ENTRAR ▶</button>
     </div>
 </div>
 
@@ -74,7 +74,7 @@
             <img src="logo.png" width="35" height="35" id="admin-trigger">
             <div class="brand-title">Jazztabueno<br>Productions</div>
         </div>
-        <button onclick="salirTotal()" class="btn-salir-premium">SALIR</button>
+        <button onclick="window.salirTotal()" class="btn-salir-premium">SALIR</button>
     </header>
 
     <div class="container">
@@ -90,15 +90,15 @@
             <input type="text" id="t-url" style="width:100%; padding:14px; background:#000; color:white; border:1px solid #333; border-radius:10px; margin-bottom:10px;" placeholder="URL Audio">
             <input type="text" id="t-img" style="width:100%; padding:14px; background:#000; color:white; border:1px solid #333; border-radius:10px; margin-bottom:10px;" placeholder="URL Portada">
             <textarea id="t-playlist" style="width:100%; height:120px; background:#000; color:white; border:1px solid var(--gold); border-radius:10px; padding:10px; margin-bottom:15px;" placeholder="Lista..."></textarea>
-            <div style="display:flex; gap:10px;"><button id="btn-save" style="flex:2; background:var(--gold); border:none; padding:15px; border-radius:12px; font-weight:800;">💾 GUARDAR</button><button onclick="cancelarEdicion()" style="flex:1; background:transparent; border:1px solid #444; color:#888; border-radius:12px;">❌</button></div>
+            <div style="display:flex; gap:10px;"><button id="btn-save" style="flex:2; background:var(--gold); border:none; padding:15px; border-radius:12px; font-weight:800; cursor:pointer;">💾 GUARDAR</button><button onclick="window.cancelarEdicion()" style="flex:1; background:transparent; border:1px solid #444; color:#888; border-radius:12px; cursor:pointer;">❌</button></div>
         </div>
 
         <div class="channels-container">
-            <div class="channel-item active" onclick="filtrar('Todo', this)"><img src="logo.png" class="channel-logo"><span class="channel-name">Todo</span></div>
-            <div class="channel-item" onclick="filtrar('JAZZTABUENO', this)"><img src="https://i.postimg.cc/zVD4mstP/Jazztabueno-(2).png" class="channel-logo"><span class="channel-name">Jazztabueno</span></div>
-            <div class="channel-item" onclick="filtrar('STUDIO 79', this)"><img src="https://i.postimg.cc/NKMDbYJB/S79.png" class="channel-logo"><span class="channel-name">Studio 79</span></div>
-            <div class="channel-item" onclick="filtrar('SALSA BRAVA', this)"><img src="https://i.postimg.cc/75fchgyt/Salsa-Brava.png" class="channel-logo"><span class="channel-name">Salsa Brava</span></div>
-            <div class="channel-item" onclick="filtrar('OLD SCHOOL RADIO', this)"><img src="https://i.postimg.cc/jwQ3mczC/Old-School-Radio.png" class="channel-logo"><span class="channel-name">Old School Radio</span></div>
+            <div class="channel-item active" onclick="window.filtrar('Todo', this)"><img src="logo.png" class="channel-logo"><span class="channel-name">Todo</span></div>
+            <div class="channel-item" onclick="window.filtrar('JAZZTABUENO', this)"><img src="https://i.postimg.cc/zVD4mstP/Jazztabueno-(2).png" class="channel-logo"><span class="channel-name">Jazztabueno</span></div>
+            <div class="channel-item" onclick="window.filtrar('STUDIO 79', this)"><img src="https://i.postimg.cc/NKMDbYJB/S79.png" class="channel-logo"><span class="channel-name">Studio 79</span></div>
+            <div class="channel-item" onclick="window.filtrar('SALSA BRAVA', this)"><img src="https://i.postimg.cc/75fchgyt/Salsa-Brava.png" class="channel-logo"><span class="channel-name">Salsa Brava</span></div>
+            <div class="channel-item" onclick="window.filtrar('OLD SCHOOL RADIO', this)"><img src="https://i.postimg.cc/jwQ3mczC/Old-School-Radio.png" class="channel-logo"><span class="channel-name">Old School Radio</span></div>
         </div>
         <div id="radio-feed"></div>
     </div>
@@ -109,14 +109,14 @@
     <div style="display:flex; align-items:center; gap:15px; margin-bottom:15px;">
         <div id="p-vinyl" class="p-vinyl" style="background-image: url('logo.png');"></div>
         <div style="flex:1; overflow:hidden;"><h4 id="p-title" style="margin:0; font-size:15px; color:#ffffff; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; font-weight:800;">...</h4><div id="p-time" style="font-size:12px; color:var(--gold); font-weight:900;">00:00 / 00:00</div></div>
-        <button onclick="togglePlay()" id="p-play-btn"></button>
-        <button onclick="cerrarPlayer()" style="background:none; border:none; color:#666; font-size:28px;">×</button>
+        <button onclick="window.togglePlay()" id="p-play-btn"></button>
+        <button onclick="window.cerrarPlayer()" style="background:none; border:none; color:#666; font-size:28px;">×</button>
     </div>
     <input type="range" id="seek-bar" value="0" min="0" step="1" style="width:100%;">
     <div class="player-tools">
         <div class="tool-box"><google-cast-launcher></google-cast-launcher><span style="color:var(--gold);">Google TV</span></div>
-        <button onclick="cambiarVelocidad()" id="btn-speed" class="tool-box">1.0x</button>
-        <button onclick="toggleMute()" id="btn-mute" class="tool-box">🔊 VOL</button>
+        <button onclick="window.cambiarVelocidad()" id="btn-speed" class="tool-box">1.0x</button>
+        <button onclick="window.toggleMute()" id="btn-mute" class="tool-box">🔊 VOL</button>
     </div>
 </div>
 
@@ -132,6 +132,7 @@
     const playSVG = `<svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>`;
     const pauseSVG = `<svg viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>`;
 
+    // CAST
     window['__onGCastApiAvailable'] = function(isAvailable) {
         if (isAvailable) {
             const castContext = cast.framework.CastContext.getInstance();
@@ -161,10 +162,10 @@
 
     window.checkLogin = () => {
         const p = document.getElementById('passInput').value.toLowerCase().trim();
-        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v12', 'true'); location.reload(); }
+        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v121', 'true'); location.reload(); }
         else { alert("Clave Incorrecta"); }
     };
-    if(localStorage.getItem('jtp_auth_v12')) {
+    if(localStorage.getItem('jtp_auth_v121')) {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('app-content').style.display = 'block';
         isAdmin = true;
@@ -203,7 +204,7 @@
         document.getElementById('edit-id').value = p.id; document.getElementById('t-titulo').value = p.titulo;
         document.getElementById('t-programa').value = p.programa; document.getElementById('t-url').value = p.mp3Url;
         document.getElementById('t-img').value = p.imagenUrl; document.getElementById('t-playlist').value = p.playlist || "";
-        document.getElementById('admin-panel').style.display = 'block';
+        document.getElementById('admin-panel').style.display = 'block'; window.scrollTo({top: 0, behavior: 'smooth'});
     };
 
     function render() {
